changed working fluid

--- a/Thermo Project - District Heating Model.ipynb
+++ b/Thermo Project - District Heating Model.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,69 +49,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = 65 # kg, of water\n",
-    "c = 3470 # J/kg-C, of water\n",
+    "m = 20 # kg, of water\n",
+    "c = 122.5 # J/kg-C, of r11\n",
     "deltaT = np.array([1,10]) / 3600 # C/s, \"Qout\" from the house ranges from 1C-10C / hour\n",
     "\n",
-    "T1 = 20 + 273.15 # K\n",
-    "T2 = 90 + 273.15 # K\n",
-    "T3 = 60 + 273.15 # K\n",
-    "T4 = 50 + 273.15 # K\n",
-    "T5 = T1\n",
-    "T6 = T1"
+    "T1 = 40 + 273.15 # K\n",
+    "T2 = 25 + 273.15 # K\n",
+    "T3 = 45 + 273.15 # K\n",
+    "T4 = 40 + 273.15 # K\n",
+    "##T5 = T1\n",
+    "##T6 = T1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2537.433404372583 2659.5300141957373 251.1803519139721 209.34176132667645 2452.1 2537.433404372583\n"
+      "410.29454596754215 402.6446586498881 239.61664930737723 235.11103820513713\n"
      ]
     }
    ],
    "source": [
-    "substance = 'water'\n",
+    "substance = 'R11'\n",
     "\n",
     "# Enthalpy calculations\n",
     "h1 = CP.PropsSI('H', 'T',T1, 'Q',1, substance) / 1000 # vapor --> 2538.1 kJ/kg\n",
     "h2 = CP.PropsSI('H', 'T',T2, 'Q',1, substance) / 1000 # vapor --> 2660.1 kJ/kg\n",
     "h3 = CP.PropsSI('H', 'T',T3, 'Q',0, substance) / 1000 # liquid --> 251.13 kJ/kg\n",
     "h4 = CP.PropsSI('H', 'T',T4, 'Q',0, substance) / 1000 # liquid --> 209.33 kJ/kg\n",
-    "h5 = 2452.1 # kJ/kg, liquid-vapor from textbook\n",
-    "h6 = CP.PropsSI('H', 'T',T6, 'Q',1, substance) / 1000 # vapor --> 2538.1 kJ/kg\n",
+    "##h5 = 2452.1 # kJ/kg, liquid-vapor from textbook\n",
+    "##h6 = CP.PropsSI('H', 'T',T6, 'Q',1, substance) / 1000 # vapor --> 2538.1 kJ/kg\n",
     "\n",
-    "print(h1, h2, h3, h4, h5, h6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.73421163, 7.34211628])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m_flowrate = Q56 / (h6 - h5) # kg/s\n",
-    "\n",
-    "m_flowrate"
+    "print(h1, h2, h3, h4,) ##h5, h6"
    ]
   },
   {
@@ -123,24 +101,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.06265278, 0.62652778])"
+       "array([0.00068056, 0.00680556])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Q56 = m*c*deltaT / 1000 # kW\n",
+    "Q41 = m*c*deltaT / 1000 # kW\n",
     "\n",
-    "Q56"
+    "Q41"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.88481521e-06, 3.88481521e-05])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m_flowrate = Q41 / (h1 - h4) # kg/s\n",
+    "\n",
+    "m_flowrate"
    ]
   },
   {
@@ -152,16 +152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1768.2383272 , 17682.38327201])"
+       "array([0.00063333, 0.00633334])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,16 +181,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ -89.64475072, -896.44750715])"
+       "array([2.97183986e-05, 2.97183986e-04])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,14 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The COP of this heat pump cycle is: -19.724951133123504\n"
+      "The COP of this heat pump cycle is: 21.311164801902624\n"
      ]
     }
    ],
@@ -226,6 +226,20 @@
     "\n",
     "print('The COP of this heat pump cycle is: ' + str(COP[0]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -244,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
