--- a/Thermo Project - District Heating Model.ipynb
+++ b/Thermo Project - District Heating Model.ipynb
@@ -14,217 +14,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import CoolProp.CoolProp as CP\n",
-    "import CoolProp.Plots as CPP\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simplified Model\n",
-    "\n",
-    "Simple Diagram          |  System Diagram          | TS Diagram\n",
-    ":----------------------:|:------------------------:|:--------------------------:\n",
-    "![](simple_diagram.png) |  ![](system_diagram.png) | ![](ts_diagram.jpeg)\n",
-    "\n",
-    "- Q56 represents the heat transfer _into_ the evaporator.\n",
-    "- Q23 represents the heat transfer _out of_ the condensor.\n",
-    "- W12 represents the work _into_ the compressor."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Defining State Variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m = 20 # kg, of water\n",
-    "c = 122.5 # J/kg-C, of r11\n",
-    "deltaT = np.array([1,10]) / 3600 # C/s, \"Qout\" from the house ranges from 1C-10C / hour\n",
-    "\n",
-    "T1 = 40 + 273.15 # K\n",
-    "T2 = 25 + 273.15 # K\n",
-    "T3 = 45 + 273.15 # K\n",
-    "T4 = 40 + 273.15 # K\n",
-    "##T5 = T1\n",
-    "##T6 = T1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "410.29454596754215 402.6446586498881 239.61664930737723 235.11103820513713\n"
-     ]
-    }
-   ],
-   "source": [
-    "substance = 'R11'\n",
-    "\n",
-    "# Enthalpy calculations\n",
-    "h1 = CP.PropsSI('H', 'T',T1, 'Q',1, substance) / 1000 # vapor --> 2538.1 kJ/kg\n",
-    "h2 = CP.PropsSI('H', 'T',T2, 'Q',1, substance) / 1000 # vapor --> 2660.1 kJ/kg\n",
-    "h3 = CP.PropsSI('H', 'T',T3, 'Q',0, substance) / 1000 # liquid --> 251.13 kJ/kg\n",
-    "h4 = CP.PropsSI('H', 'T',T4, 'Q',0, substance) / 1000 # liquid --> 209.33 kJ/kg\n",
-    "##h5 = 2452.1 # kJ/kg, liquid-vapor from textbook\n",
-    "##h6 = CP.PropsSI('H', 'T',T6, 'Q',1, substance) / 1000 # vapor --> 2538.1 kJ/kg\n",
-    "\n",
-    "print(h1, h2, h3, h4,) ##h5, h6"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Q56: Heat Transfer into the Evaporator (Qc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.00068056, 0.00680556])"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Q41 = m*c*deltaT / 1000 # kW\n",
-    "\n",
-    "Q41"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3.88481521e-06, 3.88481521e-05])"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m_flowrate = Q41 / (h1 - h4) # kg/s\n",
-    "\n",
-    "m_flowrate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Q23: Heat Transfer out of the Condensor (Qh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.00063333, 0.00633334])"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Q23 = m_flowrate * (h2 - h3) # kW\n",
-    "\n",
-    "Q23"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## W12: Work into Compressor (Win)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2.97183986e-05, 2.97183986e-04])"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "W12 = m_flowrate * (h1 - h2) # kW\n",
-    "\n",
-    "W12"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## COP"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The COP of this heat pump cycle is: 21.311164801902624\n"
-     ]
-    }
-   ],
-   "source": [
-    "COP = Q23 / W12 # Qh/Win\n",
-    "\n",
-    "print('The COP of this heat pump cycle is: ' + str(COP[0]))"
+    "## 1. Simplified Model"
    ]
   },
   {
@@ -258,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
